--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -28,7 +28,15 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    #gzip
+    gzip  on;
+    gzip_http_version 1.1;
+    gzip_vary on;
+    gzip_comp_level 3;
+    gzip_proxied any;
+    gzip_types application/vnd.api+json;
+    gzip_min_length  1024;
+    gzip_buffers 16 8k;
 
     include /etc/nginx/conf.d/*.conf;
 }
